--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -1,26 +1,28 @@
 <main class="login-form">
-    <div>
+  <div>
     <h2>SiennaVet</h2>
     <p>Bienvenido</p>
 
-    <form #userForm="ngForm" (ngSubmit)="login(userForm)"  class="form-conteiner">
-        <label for="">
-            Email
-            <input type="email" ngModel name="email" id="email">
-        </label>
+    <form #userForm="ngForm" (ngSubmit)="login(userForm)" class="form-conteiner">
+      <label>
+        Email
+        <input type="email" ngModel name="email" id="email">
+      </label>
 
-        <label for="">
-            Contraseña 
+      <label>
+        Contraseña
 
-            <input type="password" ngModel name="contrasena" id="contrasena">
-        </label>
+        <input type="password" ngModel name="contrasena" id="contrasena">
+      </label>
 
-        <input type="submit" value="Login">
-        
-        <span *ngIf="error" [style.color]="'red'">
-            {{error}}
-        </span>
+      <input type="submit" value="Login">
+
+      @if (error) {
+        <span [style.color]="'red'">
+      {{ error }}
+      </span>
+      }
     </form>
     <a href="#" class="link-text" (click)="volver()">volver</a>
-    </div>
+  </div>
 </main>
